--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </ul>
             </nav>
             <h1>The Magical <br> Planet</h1>
-            <button  type="button"> <b>  Explore The Galaxy </b> </button>
+            <a href="mars.html" class="btn"><b>  Check Out Mars  </b></a> 
     
          <div class="indicator">
             <span></span>
@@ -32,7 +32,7 @@
 
          <div class="cta">
             <p>You can Explore this Planet as well as other Galaxies in our Solar System</p>
-            <button  type="button"> Check Out Mars &#x27A4;</button>
+            <button  type="button">  Explore The Galaxy&#x27A4;</button>
          </div>
 
     </div>
