--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
          </div>
 
          <div class="cta">
+            <a href="webb.html" class="btn"> Explore The Galaxy  &#x27A4;</a>
+            <br>
+            <br>
+            <br>
             <p>You can Explore this Planet as well as other Galaxies in our Solar System</p>
-            <button  type="button">  Explore The Galaxy&#x27A4;</button>
+         
          </div>
 
     </div>
